NEWS
====

* YYYY/MM/DD v.1.3 (NOT RELEASED YET)

    - hex2dump: show 0x7F character as dot for better compatibility 
      with GNU less utility.
    - tobinarray, tobinfile, tobinstr: added size parameter. (Bug #408748)

* 2009/08/04 v.1.2

    - Fixed bug 372620: tobinarray on empty file should return pad bytes 
      when address range explicitly specified.
    - Improved docstrings: explicitly say that 'end' param of to-* methods 
      is always inclusive. (see bug #372625 for details).
    - Improved documentation on ih.dump(tofile).

* 2009/03/12 v.1.1

    - Fixed bug in writing hex files with small chains of bytes
    - Improved Python 2.6 compatibility

* 2009/01/01 v.1.0

    - Improved API, better performance
    - New User Manual (Zachary Clifford)

* 2007/06/16 v.0.9.0 (New API release)

    - New API for IntelHex16bit

* 2007/04/27 v.0.8.6 (BugFix and Performance improvements)

    - IntelHex is able to read/write start address records
      (HEX record type 03 and 05). (fix bug #109872)
    - Backport (from 0.9 branch) of performance improvements 
      for reading hex files

* 2007/04/22 v.0.9.devel (New API pre-release)

    - New API
    - Performance improvements: read hex file now ~45% faster

* 2007/02/26 v.0.8.5 (BugFix Release)

    Performance improvements for writing big hex files
    when starting address is far from 0.
    Patch from Heiko Henkelmann.
       
* 2007/02/26 v.0.8.4 (License added)

    The code actually licensed under BSD, but there was 
    no LICENSE file in sources archive. Added license file
    and explicit declaration in the source code.

* 2006/09/05 v.0.8.3 (BugFix Release)

    Fix writing hex files with extended linear records
    (when address overlaps 64K boundary).
    Patch from Henrik Maier.
    
* 2006/04/11 v.0.8.2 (Major improvements release)

    - Introduced new class IntelHex16bit for manipulate
      data as 16-bit values
    - You can manipulate data using dictionary-like