@@ -1,4 +1,4 @@
-Copyright (c) 2005-2008, Alexander Belchenko
+Copyright (c) 2005-2010, Alexander Belchenko
 All rights reserved.
 
 Redistribution and use in source and binary forms,
