@@ -2,7 +2,7 @@
 Python IntelHex User Manual
 ---------------------------
 
-:Version: 1.2
+:Version: 1.3
 
 .. contents::
 .. sectnum::
