@@ -42,16 +42,16 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'IntelHex'
-copyright = u'2009, Alexander Belchenko'
+copyright = u'2005-2010, Alexander Belchenko'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '1.2'
+version = '1.3'
 # The full version, including alpha/beta/rc tags.
-release = '1.2'
+release = '1.3'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
